--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "quick app that checks weather in cities",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,8 @@
   },
   "homepage": "https://github.com/dk574/weather-app#readme",
   "dependencies": {
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
     "request": "^2.88.0",
     "yargs": "^12.0.1"
   }
